# gazebo_learning_share_space

./: README.md
plugins_ROS2/src/collision_detect_gazebo_plugin/: CMakeLists.txt  package.xml
plugins_ROS2/src/collision_detect_gazebo_plugin/launch/: box_push_launch.py
plugins_ROS2/src/collision_detect_gazebo_plugin/model/: contact.world  two_box_collision.world
plugins_ROS2/src/collision_detect_gazebo_plugin/src/: ContactPlugin.cpp  ContactPlugin.hh  box_push_plugin.cpp
plugins_ROS2/src/hello_world_gazebo_plugin/: CMakeLists.txt  package.xml
plugins_ROS2/src/hello_world_gazebo_plugin/launch/: main_launch.py
plugins_ROS2/src/hello_world_gazebo_plugin/model/: simple_bot.xacro.urdf  simple_world.world
plugins_ROS2/src/hello_world_gazebo_plugin/src/: simple_world_plugin.cpp
plugins_ROS2/src/model_push_gazebo_plugin/: CMakeLists.txt  package.xml
plugins_ROS2/src/model_push_gazebo_plugin/launch/: model_push_launch.py
plugins_ROS2/src/model_push_gazebo_plugin/model/: model_push.world
plugins_ROS2/src/model_push_gazebo_plugin/src/: model_push_plugin.cpp
